--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Empresa para software">
-  <meta name="keywords"  content="EMPRESA, ESTACION DE SERVICIO, SOFTWARE, SUPERMERCADO, MEGACOMMERCE">
+  <meta name="keywords" content="EMPRESA, ESTACION DE SERVICIO, SOFTWARE, SUPERMERCADO, MEGACOMMERCE">
   <link
     href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;1,400&display=swap"
     rel="stylesheet">
@@ -18,7 +18,7 @@
 </head>
 
 <body class="body">
-<!--bem header-->
+  <!--bem header-->
   <header class="header">
     <div id="navbar">
       <div>
@@ -28,7 +28,7 @@
       </div>
       <navbar>
         <ul id="menu-principal">
-          <li class="active"><a href="index.html">INCIO</a></li>
+          <li class="active"><a href="index.html">INICIO</a></li>
           <li><a href="pages/productos.html">PRODUCTOS</a></li>
           <li><a href="pages/empresa.html">EMPRESA</a></li>
           <li><a href="pages/noticia.html">NOTICIAS</a></li>
@@ -42,35 +42,34 @@
     <!--abre el div padre-->
     <div class="divpadre">
       <div class="nuestros-productos__box">
-        <a href="pages/productos.html"><img src="img/producto-empresa.jpg" alt="empresa" style="width:120px"></a>
+        <a href="pages/Gestion empresas.html"><img src="img/producto-empresa.jpg" alt="empresa" style="width:120px"></a>
 
-        <h2>Gestion Empresas</h2>
+        <h2>Gestión Empresas</h2>
         <h5 class="precio">$100000</h5>
         <p class="small">
           Gestiona el mantenimiento de los usuarios, liquidación de cuotas fijas y de conceptos variables. Impresión y
-          cobranza de facturas en diversas formas. Reportes y estadísticas gerenciales.</p>
-        <p><button><a href="pages/productos.html">PRODUCTOS</a></button></p>
+          cobranza de facturas en diversas formas. Reportes y estadísticas gerenciales </p>
+        <p><button><a href="pages/Gestion empresas.html">Gestión Empresas</a></button></p>
       </div>
-      
-      <div class="nuestros-productos__box">
-        <a href="pages/productos.html"> <img src="img/producto-supermecado.jpg" alt="super" style="width:120px"></a>
 
-        <h2>Gestion Supermercado</h2>
+      <div class="nuestros-productos__box">
+        <a href="pages/Gestion Supermercado.html"> <img src="img/producto-supermecado.jpg" alt="super" style="width:120px"></a>
+
+        <h2>Gestión Supermercado</h2>
         <h5 class="precio">$120000</h5>
         <p class="small">
           Cubre el mantenimiento de asociados, servicios liquidables, captura de datos, impresión de liquidaciones e
           ingresos de pagos. Incluye módulo de caja y bancos, con anexo de contabilidad incorporada.</p>
-        <p><button><a href="pages/productos.html">PRODUCTOS</a></button></p>
+        <p><button><a href="pages/Gestion Supermercado.html">Gestión Supermercado</a></button></p>
       </div>
       <div class="nuestros-productos__box">
-        <a href="pages/productos.html"><img src="img/producto-supermecado.jpg" alt="estacion"
-            style="width:120px"></a>
-        <h2>Gestion Estaciones de servicio</h2>
+        <a href="pages/Gestion Estaciones de servicio.html"><img src="img/producto-supermecado.jpg" alt="estacion" style="width:120px"></a>
+        <h2>Gestión ESS</h2>
         <h5 class="precio">$150000</h5>
         <p class="small">Orientado y desarrollado de entidades con fin de lucro. Permite la parametrización de los
           distintos clientes
           para su posterior liquidación o devengamiento de deudas u otros conceptos.</p>
-        <p><button class="button"><a href="pages/productos.html">PRODUCTOS</a></button></p>
+        <p><button class="button"><a href="pages/Gestion Estaciones de servicio.html">Gestión Estaciones de servicio</a></button></p>
       </div>
     </div>
     <!--cierra el div padre-->
@@ -78,62 +77,78 @@
   </section>
   <br>
 
-    <!-- START THE FEATURETTES -->
+  <!-- Comienza el FEATURETTES -->
 
-    <hr class="featurette-divider">
+  <hr class="featurette-divider">
 
-    <div class="row featurette">
-      <div class="col-md-7">
-        <h3 class="featurette-heading">Nuestra cultura <span class="text-muted"></span></h3>
-        <p class="lead">   </p>
-         <ul> 
-         <li><p>Calidad en los servicios prestados</p></li>
-         <li><p> Atención personalizada</p></li>
-         <li><p>Trabajo en equipo</p></li>
-         <li><p> Comunicación abierta y honesta</p></li>
-         <li><p>Cumplimiento de nuestros compromisos</p></li>
-         <li><p>Calidad Profesional</p></li>
-         <li><p>  Respeto a la persona</p></li>
-         <li><p>  Responsabilidad y confianza</p></li>
-         <li><p>Excelencia en la atención hacia nuestros Clientes</p></li>
-        </ul>
-      </div>
-      <div class="col-md-5">
-        <img src="img/nuestros-valores.jpg" alt="cultura empresarial"
-        style="width:500px"></a>
-      </div>
+  <div class="row featurette">
+    <div class="col-md-7">
+      <h3 class="featurette-heading">Nuestra cultura <span class="text-muted"></span></h3>
+      <p class="lead"></p>
+      <ul>
+        <li>
+          <p>Calidad en los servicios prestados</p>
+        </li>
+        <li>
+          <p> Atención personalizada</p>
+        </li>
+        <li>
+          <p>Trabajo en equipo</p>
+        </li>
+        <li>
+          <p> Comunicación abierta y honesta</p>
+        </li>
+        <li>
+          <p>Cumplimiento de nuestros compromisos</p>
+        </li>
+        <li>
+          <p>Calidad Profesional</p>
+        </li>
+        <li>
+          <p> Respeto a la persona</p>
+        </li>
+        <li>
+          <p> Responsabilidad y confianza</p>
+        </li>
+        <li>
+          <p>Excelencia en la atención hacia nuestros Clientes</p>
+        </li>
+      </ul>
     </div>
-
-    <hr class="featurette-divider">
-
-    <div class="row featurette">
-      <div class="col-md-7 order-md-2">
-        <h3 class="featurette-heading">Nuestra misión </h3>
-        <p class="lead">Brindar soluciones integrales a través de la prestación de servicios profesionales eficientes, comprometidos con los objetivos de nuestros clientes, en búsqueda del crecimiento y optimización del desarrollo de sus negocios.</p>
-      </div>
-      <div class="col-md-5 order-md-1">
-        <img src="img/misión.jpg" alt="estacion"
-        style="width:500px"></a>
-  </div>    
+    <div class="col-md-5">
+      <img src="img/nuestros-valores.jpg" alt="cultura empresarial" class="img">
     </div>
-
-    <hr class="featurette-divider">
-
-    <div class="row featurette">
-      <div class="col-md-7">
-        <h3 class="featurette-heading">Nuestra Visión.</h3>
-        <p class="lead">Ser un empresa que posea los últimos adelantos en tecnologías de la información y lograr capacitar a nuestros clientes en áreas gerenciales y operativas.</p>
-      </div>
-      <div class="col-md-5">
-        <img src="img/visión.jpg" alt="estacion"
-        style="width:500px"></a>
-
-      </div>
+  </div>
+  <hr class="featurette-divider">
+  <div class="row featurette">
+    <div class="col-md-7 order-md-2">
+      <h3 class="featurette-heading">Nuestra misión</h3>
+      <p class="lead">Brindar soluciones integrales a través de la prestación de servicios profesionales eficientes,
+        comprometidos con los objetivos de nuestros clientes, en búsqueda del crecimiento y optimización del desarrollo
+        de sus negocios.</p>
     </div>
+    <div class="col-md-5 order-md-1">
+      <img src="img/misión.jpg" alt="estacion" class="img">
+    </div>
+  </div>
 
-    <hr class="featurette-divider">
+  <hr class="featurette-divider">
 
-    <!-- /END THE FEATURETTES -->
+  <div class="row featurette">
+    <div class="col-md-7">
+      <h3 class="featurette-heading">Nuestra Visión.</h3>
+      <p class="lead">Ser un empresa que posea los últimos adelantos en tecnologías de la información y lograr capacitar
+        a nuestros clientes en áreas gerenciales y operativas.</p>
+    </div>
+    <div class="col-md-5">
+      <img src="img/visión.jpg" alt="estacion" class="img">
+
+    </div>
+  </div>
+
+  <hr class="featurette-divider">
+
+  <!-- /END THE FEATURETTES -->
 
   </div>
 
@@ -151,8 +166,8 @@
             <h4 class="text-uppercase">Megacommerce</h4>
 
             <p>
-              Proveer soluciones de software apoyados en tecnologías en constante evolución, 
-              en todas las áreas demandantes de desarrollo informático inteligente aplicado 
+              Proveer soluciones de software apoyados en tecnologías en constante evolución,
+              en todas las áreas demandantes de desarrollo informático inteligente aplicado
               a la gestión de procesos productivos, buscando permanentemente la diferenciación
               por la calidad del servicio y la satisfacción del cliente.
             </p>
@@ -165,13 +180,13 @@
 
             <ul class="list-unstyled mb-0">
               <li>
-                <a href="#!">Gestion Empresas</a>
+                <a href="pages/Gestion empresas.html">Gestion Empresas</a>
               </li>
               <li>
-                <a href="#!">Gestion Supermercado</a>
+                <a href="pages/Gestion Supermercado.html">Gestion Supermercado</a>
               </li>
               <li>
-                <a href="#!">Gestion Estaciones de servicio</a>
+                <a href="pages/Gestion Estaciones de servicio.html">Gestion Estaciones de servicio</a>
               </li>
             </ul>
           </div>
@@ -183,13 +198,13 @@
 
             <ul class="list-unstyled mb-0">
               <li>
-                <a href="#!">Productos</a>
+                <a href="pages/productos.html">Productos</a>
               </li>
               <li>
-                <a href="#!">Empresa</a>
+                <a href="pages/empresa.html">Empresa</a>
               </li>
               <li>
-                <a href="#!">Noticias</a>
+                <a href="pages/noticia.html">Noticias</a>
               </li>
             </ul>
           </div>
