--- a/pages/productos.html
+++ b/pages/productos.html
@@ -99,22 +99,22 @@
                 <section class="">
                   <p class="d-flex justify-content-center align-items-center">
                     <a href="Gestion empresas.html" class="btn btn-outline-light btn-rounded">
-                      Ver mas
+                      Gestion para empresas
                     </a>
                   </p>
                 </section></td>
             <td>Desarrollado exclusivamente para la Gestión y Administración de EESS, cubriendo tanto los aspectos
                 operacionales como fiscales.
                 <p class="d-flex justify-content-center align-items-center">
-                  <a href="Gestion Estaciones de servicio.html" class="btn btn-outline-light" >
-                    Ver mas
+                  <a href="Gestion Supermercado.html" class="btn btn-outline-light" >
+                    Gestión Supermercado
                   </a>
-                </p> </td>
+                </p> </td>Gestion Supermercado.html
             <td>Desarrollado exclusivamente para la Gestión y Administración de Supermercados, cubriendo tanto los
                 aspectos operacionales como fiscales.
                 <p class="d-flex justify-content-center align-items-center">
-                  <a href="Gestion Supermercado.html" class="btn btn-outline-light btn-rounded">
-                    Ver mas
+                  <a href="Gestion Estaciones de servicio.html" class="btn btn-outline-light btn-rounded">
+                    Gestión Estaciones de servicio
                   </a>
                 </p></td>
         </tr>
@@ -149,13 +149,13 @@
   
               <ul class="list-unstyled mb-0">
                 <li>
-                  <a href="#!">Gestion Empresas</a>
+                  <a href="Gestion empresas.html">Gestion Empresas</a>
                 </li>
                 <li>
-                  <a href="#!">Gestion Supermercado</a>
+                  <a href="Gestion Supermercado.html">Gestion Supermercado</a>
                 </li>
                 <li>
-                  <a href="#!">Gestion Estaciones de servicio</a>
+                  <a href="Gestion Estaciones de servicio.html">Gestion Estaciones de servicio</a>
                 </li>
               </ul>
             </div>
@@ -167,13 +167,13 @@
   
               <ul class="list-unstyled mb-0">
                 <li>
-                  <a href="#!">Productos</a>
+                  <a href="productos.html">Productos</a>
                 </li>
                 <li>
-                  <a href="#!">Empresa</a>
+                  <a href="empresa.html">Empresa</a>
                 </li>
                 <li>
-                  <a href="#!">Noticias</a>
+                  <a href="noticia.html">Noticias</a>
                 </li>
               </ul>
             </div>
@@ -207,7 +207,7 @@
         <section class="">
           <p class="d-flex justify-content-center align-items-center">
             <span class="me-3">Registrese aqui</span>
-            <a href="pages/contacto.html" class="btn btn-outline-light btn-rounded">
+            <a href="contacto.html" class="btn btn-outline-light btn-rounded">
               Registrarme
             </a>
           </p>
