--- a/pages/Gestion Estaciones de servicio.html
+++ b/pages/Gestion Estaciones de servicio.html
@@ -82,6 +82,7 @@
       </div>
     </div>
   </section>
+  <!-- Footer -->
     <!-- Footer -->
     <footer class="text-center text-lg-start ">
       <!-- Grid container -->
@@ -109,13 +110,13 @@
   
               <ul class="list-unstyled mb-0">
                 <li>
-                  <a href="#!">Gestion Empresas</a>
+                  <a href="Gestion empresas.html">Gestion Empresas</a>
                 </li>
                 <li>
-                  <a href="#!">Gestion Supermercado</a>
+                  <a href="Gestion Supermercado.html">Gestion Supermercado</a>
                 </li>
                 <li>
-                  <a href="#!">Gestion Estaciones de servicio</a>
+                  <a href="Gestion Estaciones de servicio.html">Gestion Estaciones de servicio</a>
                 </li>
               </ul>
             </div>
@@ -127,13 +128,13 @@
   
               <ul class="list-unstyled mb-0">
                 <li>
-                  <a href="#!">Productos</a>
+                  <a href="productos.html">Productos</a>
                 </li>
                 <li>
-                  <a href="#!">Empresa</a>
+                  <a href="empresa.html">Empresa</a>
                 </li>
                 <li>
-                  <a href="#!">Noticias</a>
+                  <a href="noticia.html">Noticias</a>
                 </li>
               </ul>
             </div>
@@ -167,7 +168,7 @@
         <section class="">
           <p class="d-flex justify-content-center align-items-center">
             <span class="me-3">Registrese aqui</span>
-            <a href="pages/contacto.html" class="btn btn-outline-light btn-rounded">
+            <a href="contacto.html" class="btn btn-outline-light btn-rounded">
               Registrarme
             </a>
           </p>
