--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -53,150 +53,151 @@
     </div>
   </main>
    <!-- Footer -->
-   <footer class="text-center text-lg-start ">
-    <!-- Grid container -->
-    <div class="container p-4 pb-0">
-      <!-- Section: Links -->
-      <section>
-        <!--Grid row-->
-        <div class="row">
-          <!--Grid column-->
-          <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
-            <h4 class="text-uppercase">Megacommerce</h4>
-
-            <p>
-              Proveer soluciones de software apoyados en tecnologías en constante evolución, 
-              en todas las áreas demandantes de desarrollo informático inteligente aplicado 
-              a la gestión de procesos productivos, buscando permanentemente la diferenciación
-              por la calidad del servicio y la satisfacción del cliente.
-            </p>
+    <!-- Footer -->
+    <footer class="text-center text-lg-start ">
+      <!-- Grid container -->
+      <div class="container p-4 pb-0">
+        <!-- Section: Links -->
+        <section>
+          <!--Grid row-->
+          <div class="row">
+            <!--Grid column-->
+            <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
+              <h4 class="text-uppercase">Megacommerce</h4>
+  
+              <p>
+                Proveer soluciones de software apoyados en tecnologías en constante evolución, 
+                en todas las áreas demandantes de desarrollo informático inteligente aplicado 
+                a la gestión de procesos productivos, buscando permanentemente la diferenciación
+                por la calidad del servicio y la satisfacción del cliente.
+              </p>
+            </div>
+            <!--Grid column-->
+  
+            <!--Grid column-->
+            <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
+              <h4 class="text-uppercase">Productos</h4>
+  
+              <ul class="list-unstyled mb-0">
+                <li>
+                  <a href="Gestion empresas.html">Gestion Empresas</a>
+                </li>
+                <li>
+                  <a href="Gestion Supermercado.html">Gestion Supermercado</a>
+                </li>
+                <li>
+                  <a href="Gestion Estaciones de servicio.html">Gestion Estaciones de servicio</a>
+                </li>
+              </ul>
+            </div>
+            <!--Grid column-->
+  
+            <!--Grid column-->
+            <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
+              <h4 class="text-uppercase">Secciones </h4>
+  
+              <ul class="list-unstyled mb-0">
+                <li>
+                  <a href="productos.html">Productos</a>
+                </li>
+                <li>
+                  <a href="empresa.html">Empresa</a>
+                </li>
+                <li>
+                  <a href="noticia.html">Noticias</a>
+                </li>
+              </ul>
+            </div>
+            <!--Grid column-->
+  
+            <!--Grid column-->
+            <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
+              <h4 class="text-uppercase">CONTACTO</h4>
+  
+              <ul class="list-unstyled mb-0">
+                <li>
+                  <a href="#!">adm@Megacommerce.com.ar</a>
+                </li>
+                <li>
+                  <a href="#!">342-5987744</a>
+                </li>
+                <li>
+                  Avenida siempre viva 704
+                </li>
+              </ul>
+            </div>
+            <!--Grid column-->
           </div>
-          <!--Grid column-->
-
-          <!--Grid column-->
-          <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
-            <h4 class="text-uppercase">Productos</h4>
-
-            <ul class="list-unstyled mb-0">
-              <li>
-                <a href="#!">Gestion Empresas</a>
-              </li>
-              <li>
-                <a href="#!">Gestion Supermercado</a>
-              </li>
-              <li>
-                <a href="#!">Gestion Estaciones de servicio</a>
-              </li>
-            </ul>
-          </div>
-          <!--Grid column-->
-
-          <!--Grid column-->
-          <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
-            <h4 class="text-uppercase">Secciones </h4>
-
-            <ul class="list-unstyled mb-0">
-              <li>
-                <a href="#!">Productos</a>
-              </li>
-              <li>
-                <a href="#!">Empresa</a>
-              </li>
-              <li>
-                <a href="#!">Noticias</a>
-              </li>
-            </ul>
-          </div>
-          <!--Grid column-->
-
-          <!--Grid column-->
-          <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
-            <h4 class="text-uppercase">CONTACTO</h4>
-
-            <ul class="list-unstyled mb-0">
-              <li>
-                <a href="#!">adm@Megacommerce.com.ar</a>
-              </li>
-              <li>
-                <a href="#!">342-5987744</a>
-              </li>
-              <li>
-                Avenida siempre viva 704
-              </li>
-            </ul>
-          </div>
-          <!--Grid column-->
+          <!--Grid row-->
+        </section>
+        <!-- Section: Links -->
+  
+        <hr class="mb-4" />
+  
+        <!-- Section: CTA -->
+        <section class="">
+          <p class="d-flex justify-content-center align-items-center">
+            <span class="me-3">Registrese aqui</span>
+            <a href="contacto.html" class="btn btn-outline-light btn-rounded">
+              Registrarme
+            </a>
+          </p>
+        </section>
+        <!-- Section: CTA -->
+  
+        <hr class="mb-4" />
+  
+        <!-- Section: Social media -->
+        <section class="mb-4 text-center">
+          <!-- Facebook -->
+          <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-facebook-f"></i></a>
+  
+          <!-- Twitter -->
+          <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-twitter"></i></a>
+  
+          <!-- Google -->
+          <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-google"></i></a>
+  
+          <!-- Instagram -->
+          <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-instagram"></i></a>
+  
+          <!-- Linkedin -->
+          <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-linkedin-in"></i></a>
+  
+          <!-- Github -->
+          <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-github"></i></a>
+        </section>
+        <!-- Section: Social media -->
+      </div>
+      <!-- Grid container -->
+  
+      <!-- Copyright -->
+      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+        © 2021 Copyright:
+        <a href="index.html">Megacommerce.com</a>
+      </div>
+      <!-- Copyright -->
+    </footer>
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
-        <!--Grid row-->
-      </section>
-      <!-- Section: Links -->
-
-      <hr class="mb-4" />
-
-      <!-- Section: CTA -->
-      <section class="">
-        <p class="d-flex justify-content-center align-items-center">
-          <span class="me-3">Registrese aqui</span>
-          <a href="pages/contacto.html" class="btn btn-outline-light btn-rounded">
-            Registrarme
-          </a>
-        </p>
-      </section>
-      <!-- Section: CTA -->
-
-      <hr class="mb-4" />
-
-      <!-- Section: Social media -->
-      <section class="mb-4 text-center">
-        <!-- Facebook -->
-        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-facebook-f"></i></a>
-
-        <!-- Twitter -->
-        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-twitter"></i></a>
-
-        <!-- Google -->
-        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-google"></i></a>
-
-        <!-- Instagram -->
-        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-instagram"></i></a>
-
-        <!-- Linkedin -->
-        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-linkedin-in"></i></a>
-
-        <!-- Github -->
-        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-github"></i></a>
-      </section>
-      <!-- Section: Social media -->
-    </div>
-    <!-- Grid container -->
-
-    <!-- Copyright -->
-    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
-      © 2021 Copyright:
-      <a href="index.html">Megacommerce.com</a>
-    </div>
-    <!-- Copyright -->
-  </footer>
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        ¿Confirma que desea enviar sus datos?
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-        <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Enviar</button>
+        <div class="modal-body">
+          ¿Confirma que desea enviar sus datos?
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+          <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Enviar</button>
+        </div>
       </div>
     </div>
   </div>
-</div>
-
-  <!-- Footer -->
-  <!-- fin container -->
+  
+    <!-- Footer -->
+    <!-- fin container -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 
