--- a/pages/empresa.html
+++ b/pages/empresa.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <meta name="description" content="Empresa">
-  <link
-    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;1,400&display=swap"
-    rel="stylesheet">
-  <link rel="stylesheet" href="../styles/styles-compilado.css" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-  <title>Empresa</title>
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Contacto Megacommerce">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;1,400&display=swap"
+      rel="stylesheet">
+   
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="../styles/styles-compilado.css" />
+    <title>Contacto</title>
+  </head>
 
 <body>
   <header class="header">
@@ -57,10 +56,6 @@
         <div class="carousel-item">
           <img src="../img/interior empresa.jpg" class="d-block w-100" alt="seccion empresa">
         </div>
-        <div class="carousel-item">
-          <img src="../img/interior empresa2.jpg"  class="d-block w-100" alt="seccion empresa">
-        </div>
-      </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
@@ -70,10 +65,17 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
-    <br>
-    <h3>Nuestro equipo</h3>
-    <img src="../img/nuestro grupo de trabajo.jpg" class="border" alt="equipo de trabajo">
+
+    <div class="card fondo-card">
+      <div class="card-body">
+        <h5 class="card-title">Nuestro equipo</h5>
+        <p class="card-text">«El talento gana partidos, pero el trabajo en equipo gana campeonatos».</p>
+        <p class="card-text"><small class="text-muted">En nuestra empresa apostamos fuerte al trabajo en equipo</small></p>
+      </div>
+      <img src="../img/nuestro grupo de trabajo.jpg" class="card-img-bottom" alt="..." class="img fluid">
+    </div>
   </section>
+  <!-- Footer -->
     <!-- Footer -->
     <footer class="text-center text-lg-start ">
       <!-- Grid container -->
@@ -101,13 +103,13 @@
   
               <ul class="list-unstyled mb-0">
                 <li>
-                  <a href="#!">Gestion Empresas</a>
+                  <a href="Gestion empresas.html">Gestion Empresas</a>
                 </li>
                 <li>
-                  <a href="#!">Gestion Supermercado</a>
+                  <a href="Gestion Supermercado.html">Gestion Supermercado</a>
                 </li>
                 <li>
-                  <a href="#!">Gestion Estaciones de servicio</a>
+                  <a href="Gestion Estaciones de servicio.html">Gestion Estaciones de servicio</a>
                 </li>
               </ul>
             </div>
@@ -119,13 +121,13 @@
   
               <ul class="list-unstyled mb-0">
                 <li>
-                  <a href="#!">Productos</a>
+                  <a href="productos.html">Productos</a>
                 </li>
                 <li>
-                  <a href="#!">Empresa</a>
+                  <a href="empresa.html">Empresa</a>
                 </li>
                 <li>
-                  <a href="#!">Noticias</a>
+                  <a href="noticia.html">Noticias</a>
                 </li>
               </ul>
             </div>
@@ -159,7 +161,7 @@
         <section class="">
           <p class="d-flex justify-content-center align-items-center">
             <span class="me-3">Registrese aqui</span>
-            <a href="pages/contacto.html" class="btn btn-outline-light btn-rounded">
+            <a href="contacto.html" class="btn btn-outline-light btn-rounded">
               Registrarme
             </a>
           </p>
