--- a/pages/noticia.html
+++ b/pages/noticia.html
@@ -58,6 +58,7 @@
       sistemas.</p>
     <img src="../img/Actualizacion clave fiscal.jpg" class="border" alt="clave fiscal">
   </section>
+   <!-- Footer -->
     <!-- Footer -->
     <footer class="text-center text-lg-start ">
       <!-- Grid container -->
@@ -85,13 +86,13 @@
   
               <ul class="list-unstyled mb-0">
                 <li>
-                  <a href="#!">Gestion Empresas</a>
+                  <a href="Gestion empresas.html">Gestion Empresas</a>
                 </li>
                 <li>
-                  <a href="#!">Gestion Supermercado</a>
+                  <a href="Gestion Supermercado.html">Gestion Supermercado</a>
                 </li>
                 <li>
-                  <a href="#!">Gestion Estaciones de servicio</a>
+                  <a href="Gestion Estaciones de servicio.html">Gestion Estaciones de servicio</a>
                 </li>
               </ul>
             </div>
@@ -103,13 +104,13 @@
   
               <ul class="list-unstyled mb-0">
                 <li>
-                  <a href="#!">Productos</a>
+                  <a href="productos.html">Productos</a>
                 </li>
                 <li>
-                  <a href="#!">Empresa</a>
+                  <a href="empresa.html">Empresa</a>
                 </li>
                 <li>
-                  <a href="#!">Noticias</a>
+                  <a href="noticia.html">Noticias</a>
                 </li>
               </ul>
             </div>
@@ -143,7 +144,7 @@
         <section class="">
           <p class="d-flex justify-content-center align-items-center">
             <span class="me-3">Registrese aqui</span>
-            <a href="pages/contacto.html" class="btn btn-outline-light btn-rounded">
+            <a href="contacto.html" class="btn btn-outline-light btn-rounded">
               Registrarme
             </a>
           </p>
