--- a/pages/noticia.html
+++ b/pages/noticia.html
@@ -35,25 +35,25 @@
     </div>
   </header>
   <section class="noticia">
-    <h2>Actualizacion 185.00 sistema para estaciones de servicios</h2>
-    <p class="lead">MODIFICACIÓN !!! Reportes-> Artículos->Información general de ventas. - Se agregó la posibilidad de filtrar por
+    <h2>Actualización 185.00 sistema para estaciones de servicios</h2>
+    <p class="lead">MODIFICACIÓN!!! Reportes-> Artículos->Información general de ventas. - Se agregó la posibilidad de filtrar por
       ZONAS. :: MODIFICACIÓN. Altas, Bajas y Modificaciones de Artículos. - Se corrigió la validación del código de
       barras. Se corrigió la selección del Sub Rubro. :: MODIFICACIÓN !!! Módulo Pedidos. - Ingreso Manual de Pedidos.
       Al confirmar el ingreso de un p</p>
   </section>
 
   <section class="noticia">
-    <h2>Actualizacion para el sistema de gestion de supermercados 172.00</h2>
+    <h2>Actualización para el sistema de gestion de supermercados 172.00</h2>
     <p class="lead">:: MODIFICACIÓN !!! Optimización en el formato de los comprobantes de venta "A" :: MODIFICACIÓN !!! Corrección en
       el proceso que permite ingresar los artículos a una nota de crésdito desde una factura, cuando la misma posee
-      descuentos en linea.
+      descuentos en línea.
       :: MODIFICACIÓN !!! Optimización en el formato de los comprobantes de venta "A" :: MODIFICACIÓN !!! Corrección en
       el proceso que permite ingresar los artículos a una nota de crésdito desde una factura, cuando la misma posee
-      descuentos en linea.
+      descuentos en línea.
     </p>
   </section>
   <section class="noticia">
-    <h2>Actualizacion 164.00 sistema para estaciones de servicios</h2>
+    <h2>Actualización 164.00 sistema para estaciones de servicios</h2>
     <p class="lead">Nuevos parametros en la clave fiscal de acceso unico y personal a la pagina de afip, con enlace desde nuestos
       sistemas.</p>
     <img src="../img/Actualizacion clave fiscal.jpg" class="border" alt="clave fiscal">
