--- a/pages/productos.html
+++ b/pages/productos.html
@@ -36,9 +36,9 @@
 
       <tr>
             <th></th>
-            <th>Gestion empresas</th>
-            <th>Gestion estacion de servicio</th>
-            <th>Gestion estacion para supermercado</th>
+            <th>Gestión empresas</th>
+            <th>Gestión estacion de servicio</th>
+            <th>Gestión estacion para supermercado</th>
         <tr>
           <tr>
             <td>Imagen del sistema</td>
@@ -48,8 +48,8 @@
         </tr> 
             <td>
                 <ol>
-                    <li>licencia</li>
-                    <li>abono</li>
+                    <li>Licencia</li>
+                    <li>Abono</li>
                 </ol>
             </td>
             <td>
@@ -75,31 +75,31 @@
             <td>Beneficio del abono Mensual</td>
             <td>
                 <ul>
-                    <li>Soporte tecnico</li>
+                    <li>Soporte  técnico</li>
                     <li>Actualizaciones al dia</li>
                 </ul>
             </td>
             <td>
                 <ul>
-                    <li>Soporte tecnico</li>
-                    <li>Actualizaciones al dia</li>
+                    <li>Soporte  técnico</li>
+                    <li>Actualizaciones al día</li>
                 </ul>
             </td>
             <td>
                 <ul>
-                    <li>Soporte tecnico</li>
-                    <li>Actualizaciones al dia</li>
+                    <li>Soporte  técnico</li>
+                    <li>Actualizaciones al día</li>
                 </ul>
             </td>
         </tr>
         <tr>
-            <td>Caracteristicas</td>
+            <td>Características</td>
             <td>Sistema orientado y desarrollado exclusivamente para la Gestión Administrativa Comercial de empresas
                 o comercios.
                 <section class="">
                   <p class="d-flex justify-content-center align-items-center">
                     <a href="Gestion empresas.html" class="btn btn-outline-light btn-rounded">
-                      Gestion para empresas
+                      Gestión para empresas
                     </a>
                   </p>
                 </section></td>
@@ -149,13 +149,13 @@
   
               <ul class="list-unstyled mb-0">
                 <li>
-                  <a href="Gestion empresas.html">Gestion Empresas</a>
+                  <a href="Gestion empresas.html">Gestión Empresas</a>
                 </li>
                 <li>
-                  <a href="Gestion Supermercado.html">Gestion Supermercado</a>
+                  <a href="Gestion Supermercado.html">Gestión Supermercado</a>
                 </li>
                 <li>
-                  <a href="Gestion Estaciones de servicio.html">Gestion Estaciones de servicio</a>
+                  <a href="Gestion Estaciones de servicio.html">Gestión Estaciones de servicio</a>
                 </li>
               </ul>
             </div>
