--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
   <div class="row featurette">
     <div class="col-md-7">
       <h3 class="featurette-heading">Nuestra Visión.</h3>
-      <p class="lead">Ser un empresa que posea los últimos adelantos en tecnologías de la información y lograr capacitar
+      <p class="lead">Ser una empresa que posea los últimos adelantos en tecnologías de la información y lograr capacitar
         a nuestros clientes en áreas gerenciales y operativas.</p>
     </div>
     <div class="col-md-5">
