--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -52,7 +52,7 @@
       </form>
     </div>
   </main>
-   <!-- Footer -->
+ <!-- Footer -->
     <!-- Footer -->
     <footer class="text-center text-lg-start ">
       <!-- Grid container -->
@@ -80,13 +80,13 @@
   
               <ul class="list-unstyled mb-0">
                 <li>
-                  <a href="Gestion empresas.html">Gestion Empresas</a>
+                  <a href="Gestion empresas.html">Gestión Empresas</a>
                 </li>
                 <li>
-                  <a href="Gestion Supermercado.html">Gestion Supermercado</a>
+                  <a href="Gestion Supermercado.html">Gestión Supermercado</a>
                 </li>
                 <li>
-                  <a href="Gestion Estaciones de servicio.html">Gestion Estaciones de servicio</a>
+                  <a href="Gestion Estaciones de servicio.html">Gestión Estaciones de servicio</a>
                 </li>
               </ul>
             </div>
@@ -137,7 +137,7 @@
         <!-- Section: CTA -->
         <section class="">
           <p class="d-flex justify-content-center align-items-center">
-            <span class="me-3">Registrese aqui</span>
+            <span class="me-3">Registrarse aqui</span>
             <a href="contacto.html" class="btn btn-outline-light btn-rounded">
               Registrarme
             </a>
