--- a/pages/empresa.html
+++ b/pages/empresa.html
@@ -75,7 +75,7 @@
       <img src="../img/nuestro grupo de trabajo.jpg" class="card-img-bottom" alt="..." class="img fluid">
     </div>
   </section>
-  <!-- Footer -->
+ <!-- Footer -->
     <!-- Footer -->
     <footer class="text-center text-lg-start ">
       <!-- Grid container -->
@@ -103,13 +103,13 @@
   
               <ul class="list-unstyled mb-0">
                 <li>
-                  <a href="Gestion empresas.html">Gestion Empresas</a>
+                  <a href="Gestion empresas.html">Gestión Empresas</a>
                 </li>
                 <li>
-                  <a href="Gestion Supermercado.html">Gestion Supermercado</a>
+                  <a href="Gestion Supermercado.html">Gestión Supermercado</a>
                 </li>
                 <li>
-                  <a href="Gestion Estaciones de servicio.html">Gestion Estaciones de servicio</a>
+                  <a href="Gestion Estaciones de servicio.html">Gestión Estaciones de servicio</a>
                 </li>
               </ul>
             </div>
@@ -160,7 +160,7 @@
         <!-- Section: CTA -->
         <section class="">
           <p class="d-flex justify-content-center align-items-center">
-            <span class="me-3">Registrese aqui</span>
+            <span class="me-3">Registrarse aqui</span>
             <a href="contacto.html" class="btn btn-outline-light btn-rounded">
               Registrarme
             </a>
