--- a/pages/Gestion Estaciones de servicio.html
+++ b/pages/Gestion Estaciones de servicio.html
@@ -30,7 +30,7 @@
           <li><a href="../index.html">INCIO</a></li>
           <li><a href="productos.html">PRODUCTOS</a></li>
           <li><a href="empresa.html">EMPRESA</a></li>
-          <li class="active"><a href="noticia.html">NOTICIAS</a></li>
+          <li><a href="noticia.html">NOTICIAS</a></li>
           <li><a href="contacto.html">CONTACTO</a></li>
         </ul>
       </navbar>
