--- a/pages/productos.html
+++ b/pages/productos.html
@@ -98,7 +98,7 @@
                 o comercios.
                 <section class="">
                   <p class="d-flex justify-content-center align-items-center">
-                    <a href="Gestion empresas.html" class="btn btn-outline-light btn-rounded">
+                    <a href="Gestion empresas.html" class="btn btn-outline-light btn-rounded btn-tabla-gestion">
                       Gestión para empresas
                     </a>
                   </p>
@@ -106,15 +106,15 @@
             <td>Desarrollado exclusivamente para la Gestión y Administración de EESS, cubriendo tanto los aspectos
                 operacionales como fiscales.
                 <p class="d-flex justify-content-center align-items-center">
-                  <a href="Gestion Supermercado.html" class="btn btn-outline-light" >
+                  <a href="Gestion Supermercado.html" class="btn btn-outline-light btn-rounded btn-tabla-gestion" >
                     Gestión Supermercado
                   </a>
                 </p> </td>Gestion Supermercado.html
             <td>Desarrollado exclusivamente para la Gestión y Administración de Supermercados, cubriendo tanto los
                 aspectos operacionales como fiscales.
                 <p class="d-flex justify-content-center align-items-center">
-                  <a href="Gestion Estaciones de servicio.html" class="btn btn-outline-light btn-rounded">
-                    Gestión Estaciones de servicio
+                  <a href="Gestion Estaciones de servicio.html" class="btn btn-outline-light btn-rounded btn-tabla-gestion">
+                    Gestión EESS
                   </a>
                 </p></td>
         </tr>
