--- a/pages/Gestion empresas.html
+++ b/pages/Gestion empresas.html
@@ -28,7 +28,7 @@
           <li><a href="../index.html">INCIO</a></li>
           <li><a href="productos.html">PRODUCTOS</a></li>
           <li><a href="empresa.html">EMPRESA</a></li>
-          <li class="active"><a href="noticia.html">NOTICIAS</a></li>
+          <li><a href="noticia.html">NOTICIAS</a></li>
           <li><a href="contacto.html">CONTACTO</a></li>
         </ul>
       </navbar>
@@ -36,7 +36,7 @@
   </header>
   <h1>Gestion para empresas</h1>
   <section class="container">
-    <div class="card mb-3">
+    <div class="card mb-3 card fondo-card">
       <img  src="../img/empresa.jpg"  class="card-img-top" src="..." alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title">Gestion para empresas</h5>
