se agrego link telefono y email en el footer. Se arreglo link copyright

--- a/pages/noticia.html
+++ b/pages/noticia.html
@@ -122,10 +122,10 @@
   
               <ul class="list-unstyled mb-0">
                 <li>
-                  <a href="#!">adm@Megacommerce.com.ar</a>
+                  <a href="mailto:adm@Megacommerce.com.ar">adm@Megacommerce.com.ar</a>
                 </li>
                 <li>
-                  <a href="#!">342-5987744</a>
+                  <a href="tel:+543425987744">342-5987744</a>
                 </li>
                 <li>
                   Avenida siempre viva 704
@@ -180,7 +180,7 @@
       <!-- Copyright -->
       <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
         © 2021 Copyright:
-        <a href="index.html">Megacommerce.com</a>
+        <a href="../index.html">Megacommerce.com</a>
       </div>
       <!-- Copyright -->
     </footer>
