--- a/index.html
+++ b/index.html
@@ -216,10 +216,10 @@
 
             <ul class="list-unstyled mb-0">
               <li>
-                <a href="#!">adm@Megacommerce.com.ar</a>
+                <a href="mailto:adm@Megacommerce.com.ar">adm@Megacommerce.com.ar</a>
               </li>
               <li>
-                <a href="#!">342-5987744</a>
+                <a href="tel:+543425987744">342-5987744</a>
               </li>
               <li>
                 Avenida siempre viva 704
