--- a/pages/Gestion Supermercado.html
+++ b/pages/Gestion Supermercado.html
@@ -29,7 +29,7 @@
           <li><a href="../index.html">INCIO</a></li>
           <li><a href="productos.html">PRODUCTOS</a></li>
           <li><a href="empresa.html">EMPRESA</a></li>
-          <li></li><a href="noticia.html">NOTICIAS</a></li>
+          <li><a href="noticia.html">NOTICIAS</a></li>
           <li><a href="contacto.html">CONTACTO</a></li>
         </ul>
       </navbar>
@@ -147,10 +147,10 @@
   
               <ul class="list-unstyled mb-0">
                 <li>
-                  <a href="#!">adm@Megacommerce.com.ar</a>
+                  <a href="mailto:adm@Megacommerce.com.ar">adm@Megacommerce.com.ar</a>
                 </li>
                 <li>
-                  <a href="#!">342-5987744</a>
+                  <a href="tel:+543425987744">342-5987744</a>
                 </li>
                 <li>
                   Avenida siempre viva 704
@@ -205,7 +205,7 @@
       <!-- Copyright -->
       <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
         © 2021 Copyright:
-        <a href="index.html">Megacommerce.com</a>
+        <a href="../index.html">Megacommerce.com</a>
       </div>
       <!-- Copyright -->
     </footer>
