cambio de imagenes

--- a/pages/Gestion Estaciones de servicio.html
+++ b/pages/Gestion Estaciones de servicio.html
@@ -38,7 +38,7 @@
   </header>
   <h1>Gestion Estaciones de servicio</h1>
   <section class="container">
-    <div class="card mb-3">
+    <div class="card mb-3 card fondo-card">
       <img  src="../img/estaciondeservicio.jpg"  class="card-img-top" src="..." alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title">Gestion para estaciones de servicio</h5>
