--- a/pages/Gestion Supermercado.html
+++ b/pages/Gestion Supermercado.html
@@ -38,7 +38,7 @@
   <section class="container">
           <h1>Gestion Supermercado</h1>
           <section class="container">
-            <div class="card mb-3">
+            <div class="card mb-3 card fondo-card">
               <img  src="../img/supermecado.jpg"  class="card-img-top" src="..." alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title">Gestion para supermecado</h5>
