modificaciones finales, header y padding en paginas internas

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -14,31 +14,47 @@
 </head>
 
 <body>
-    <header class="header">
-        <div id="navbar">
-            <div>
-                <a href="../index.html"> <img src="../img/logo-mc.png" class="header__logo" alt="logo Megacommerce"
-                        width="100" height="100"></a>
-            </div>
-            <navbar>
-                <ul id="menu-principal">
-                    <li><a href="../index.html">INCIO</a></li>
-                    <li class="active"><a href="productos.html">PRODUCTOS</a></li>
-                    <li><a href="empresa.html">EMPRESA</a></li>
-                    <li><a href="noticia.html">NOTICIAS</a></li>
-                    <li><a href="contacto.html">CONTACTO</a></li>
-                </ul>
-            </navbar>
+  <header class="header">
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <nav class="navbar navbar-light">
+        <div class="container">
+        <a href="../index.html"> <img src="../img/logo-mc.png" class="header__logo" alt="logo Megacommerce" width="100"
+            height="100"></a>
         </div>
-    </header>
+      </nav>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link menu" href="../index.html">INICIO</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active menu" aria-current="page" href="productos.html">PRODUCTOS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link menu" href="empresa.html">EMPRESA</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link menu" href="noticia.html">NOTICIAS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link menu" href="contacto.html">CONTACTO</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
    <div class="table-responsive">
     <table class="table">
 
       <tr>
             <th></th>
-            <th>Gestión empresas</th>
-            <th>Gestión estacion de servicio</th>
-            <th>Gestión estacion para supermercado</th>
+            <th><p class="p">Gestión empresas</p></th>
+            <th><p class="p">Gestión estacion de servicio</p></th>
+            <th><p class="p">Gestión estacion para supermercado</p></th>
         <tr>
           <tr>
             <td>Imagen del sistema</td>
@@ -109,7 +125,7 @@
                   <a href="Gestion Supermercado.html" class="btn btn-outline-light btn-rounded btn-tabla-gestion" >
                     Gestión Supermercado
                   </a>
-                </p> </td>Gestion Supermercado.html
+                </p> </td>
             <td>Desarrollado exclusivamente para la Gestión y Administración de Supermercados, cubriendo tanto los
                 aspectos operacionales como fiscales.
                 <p class="d-flex justify-content-center align-items-center">
