--- a/index.html
+++ b/index.html
@@ -20,22 +20,37 @@
 <body class="body">
   <!--bem header-->
   <header class="header">
-    <div id="navbar">
-      <div>
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <nav class="navbar navbar-light">
+        <div class="container">
         <a href="index.html"> <img src="img/logo-mc.png" class="header__logo" alt="logo Megacommerce" width="100"
             height="100"></a>
-
+        </div>
+      </nav>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link menu active" aria-current="page" href="index.html">INICIO</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link menu" href="pages/productos.html">PRODUCTOS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link menu" href="pages/empresa.html">EMPRESA</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link menu" href="pages/noticia.html">NOTICIAS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link menu" href="pages/contacto.html">CONTACTO</a>
+            </li>
+          </ul>
+        </div>
       </div>
-      <navbar>
-        <ul id="menu-principal">
-          <li class="active"><a href="index.html">INICIO</a></li>
-          <li><a href="pages/productos.html">PRODUCTOS</a></li>
-          <li><a href="pages/empresa.html">EMPRESA</a></li>
-          <li><a href="pages/noticia.html">NOTICIAS</a></li>
-          <li><a href="pages/contacto.html">CONTACTO</a></li>
-        </ul>
-      </navbar>
-    </div>
+    </nav>
   </header>
   <section class="nuestros-productos">
     <h1>Nuestros Productos</h1>
