--- a/pages/Gestion Supermercado.html
+++ b/pages/Gestion Supermercado.html
@@ -19,21 +19,37 @@
 
 <body>
   <header class="header">
-    <div id="navbar">
-      <div>
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <nav class="navbar navbar-light">
+        <div class="container">
         <a href="../index.html"> <img src="../img/logo-mc.png" class="header__logo" alt="logo Megacommerce" width="100"
             height="100"></a>
+        </div>
+      </nav>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link  menu" aria-current="page" href="../index.html">INICIO</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link  menu" href="productos.html">PRODUCTOS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link menu" href="empresa.html">EMPRESA</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link menu" href="noticia.html">NOTICIAS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link menu" href="contacto.html">CONTACTO</a>
+            </li>
+          </ul>
+        </div>
       </div>
-      <navbar>
-        <ul id="menu-principal">
-          <li><a href="../index.html">INCIO</a></li>
-          <li><a href="productos.html">PRODUCTOS</a></li>
-          <li><a href="empresa.html">EMPRESA</a></li>
-          <li><a href="noticia.html">NOTICIAS</a></li>
-          <li><a href="contacto.html">CONTACTO</a></li>
-        </ul>
-      </navbar>
-    </div>
+    </nav>
   </header>
   <section class="container">
           <h1>Gestion Supermercado</h1>
