agregue datos de para transferir a la pagina y jquery

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <p class="small">
           Gestiona el mantenimiento de los usuarios, liquidación de cuotas fijas y de conceptos variables. Impresión y
           cobranza de facturas en diversas formas. Reportes y estadísticas gerenciales </p>
-        <p><button><a href="pages/pago.html">Comprar</a></button></p>
+        <p><button><a href="pages/pago.html">Ver formas de Pago</a></button></p>
       </div>
 
       <div class="nuestros-productos__box">
@@ -75,7 +75,7 @@
         <p class="small">
           Cubre el mantenimiento de asociados, servicios liquidables, captura de datos, impresión de liquidaciones e
           ingresos de pagos. Incluye módulo de caja y bancos, con anexo de contabilidad incorporada.</p>
-        <p><button><a href="pages/pago.html">Comprar</a></button></p>
+        <p><button><a href="pages/pago.html">Ver formas de Pago</a></button></p>
       </div>
       <div class="nuestros-productos__box">
         <a href="pages/Gestion Estaciones de servicio.html"><img src="img/producto-supermecado.jpg" alt="estacion" style="width:120px"></a>
@@ -84,7 +84,7 @@
         <p class="small">Orientado y desarrollado de entidades con fin de lucro. Permite la parametrización de los
           distintos clientes
           para su posterior liquidación o devengamiento de deudas u otros conceptos.</p>
-        <p><button class="button"><a href="pages/pago.html">Comprar</a></button></p>
+        <p><button class="button"><a href="pages/pago.html">Ver formas de Pago</a></button></p>
       </div>
     </div>
     <!--cierra el div padre-->
