--- a/pages/pago.html
+++ b/pages/pago.html
@@ -13,6 +13,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="../styles/styles-compilado.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <title>cuotas</title>
   </head>
 <body class="body">
@@ -74,21 +75,7 @@
       </div>
     </div>
   </div>
-<!-- Pago con transferencia -->
-  <!-- <section>
-    <button id="mostrardbancarios" type="button" class="btn btn-primary btn-lg">Mostrar datos para transfrencia</button>
-    <button id="ocultardbancarios" type="button" class="btn btn-primary btn-lg">Cancelar</button>
-    <div id="banco" >
-    <div class="card" style="width: 18rem;">
-      <div class="card-body">
-        <ul class="card-text">  
-          <li>Adherente:                  Megacommerce</li>
-          <li>CBU:                        33005339253300818811</li>
-          <li>CUIT:                       30-50000173-5. </li>
-          <li>EMAIL:                      Megacommerce.com</li>
-        </ul>
-      </div>
-    </div>
+
   </div> -->
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   </section>
@@ -118,15 +105,16 @@
         </style>
     <table id="table-precios" class="table-responsive container-fluid"  >
     </table>
-    <a href="contacto.html" class="btn btn-outline-light btn-rounded botcomprar">
+    <a href="contacto.html" class="btn btn-outline-light btn-rounded botcomprar"  >
    Ir a comprar
-    </a>
+   </a>
+      <!-- seccion para contratar al departamento de ventas -->
+    <h2> Nuestro Departamento de ventas y capacitacion</h2>
+    <button id = "btn2" class="btn btn-outline-light btn-rounded botcomprar"  >
+    Contactar
+</button>
+<table id="atencion-al-cliente" class="table table-responsive table-bordered border-primary" ></table>
 <!-- selleccion cuotas -->
-
-
-
-
-  
  <!-- Footer -->
     <!-- Footer -->
     <footer class="text-center text-lg-start ">
