--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -53,9 +53,9 @@
   <main class="pagina-contacto">
     <div class="pagina-contacto-contenedor">
       <h1 class="pagina-contacto-titulo">PONGASE EN CONTACTO CON NOSOTROS</h1>
-      <form action="index.html" class="pagina-contacto-form">
+      <form action="index.html" class="pagina-contacto-form was-validated">
         <label for="nombre">Nombre:*</label>
-        <input type="text" id="nombre" required></input>
+      <input type="text" class="form-control"  id="nombre" required></input>
         <label for="email">Email:*</label>
         <input type="email" id="email" required></input>
         <label for="telefono">Telefono:*</label>
@@ -64,9 +64,28 @@
         <input type="text" id="asunto" required></input>
         <label for="comentario">Comentario:*</label>
         <textarea rows="15" id="comentario"></textarea>
-        <button data-bs-toggle="modal" data-bs-target="#exampleModal" type="submit" class="button">ENVIAR</button>
+        <button data-bs-target="#exampleModal" type="submit" class="button">ENVIAR</button>
       </form>
     </div>
+    
+          <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header"> 
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                ¿Confirma que desea enviar sus datos?
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Enviar</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- fin modal -->
   </main>
  <!-- Footer -->
     <!-- Footer -->
@@ -194,27 +213,11 @@
       </div>
       <!-- Copyright -->
     </footer>
-  <!-- Modal -->
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          ¿Confirma que desea enviar sus datos?
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-          <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Enviar</button>
-        </div>
-      </div>
-    </div>
-  </div>
   
     <!-- Footer -->
     <!-- fin container -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="../js/validacion-formulario.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
-
 </html>
